New website updates

--- a/photocatalog.html
+++ b/photocatalog.html
@@ -52,15 +52,15 @@
 				<h4>Sports</h4>
 				<div class="box alt">
 					<div class="row gtr-uniform gtr-50">
-						<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/hockey01.png" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/football01.PNG" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/hockey02.png" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/track01.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/football02.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/track02.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/wrestling01.JPG" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/football03.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/wrestling02.JPG" alt="" /></span></div>
 					</div>
 				</div>
 			</section>
@@ -71,15 +71,9 @@
 				<h4>Anything else you need</h4>
 				<div class="box alt">
 					<div class="row gtr-uniform gtr-50">
-						<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/extra01.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/extra02.jpg" alt="" /></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/extra03.jpg" alt="" /></span></div>
 					</div>
 				</div>
 			</section>
@@ -90,7 +84,6 @@
 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
