--- a/videography.html
+++ b/videography.html
@@ -36,13 +36,13 @@
 				<br>
                 <div class="row gtr-150">
                     <div class="col-4 col-12-medium">
-                        <span class="video "><video controls src=""></video></span>
+                        <span class="video size "><video controls src="Videos/Business.mp4"></video></span>
                         <h3>Special Events</h3>
                         <p>If you have any upcoming events you'd like to capture for a lifetime here is an example of what I can do for you.</p>
 
                     </div>
                     <div class="col-4 col-12-medium">
-						<span class="video "><video controls src=""></video></span>
+						<span class="video size"><video controls src="Videos/sports.mp4"></video></span>
                         <h3>Sports</h3>
                         <p>I work with Athletic organizations and individual athletes to create professional captivating motion pictures</p>
                         <ul class="actions special">
@@ -50,7 +50,7 @@
                         </ul>
                     </div>
                     <div class="col-4 col-12-medium">
-                        <span class="video fit"><video controls src=""></video></span>
+                        <span class="video size"><video controls src="Videos/prom.mp4"></video></span>
                         <h3>Music videos</h3>
                         <p>Featured here is my work with an upcoming Broward County artist.</p>
                     </div>
