I added all images and completed the website

--- a/videography.html
+++ b/videography.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Best Photographer Alive</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,8 +21,8 @@
 					<h1>Hi, Welcome to <strong>TopShotFiles.</strong></h1>
 					<p>Take a look around and see how we can make your project come to life </p>
 					<ul class="actions special">
-						<li><a href="index.html" class="button scrolly">Need a Photoshoot ?</a></li>
-						<li><a href="#three" class="button scrolly">Need a Videographer ?</a></li>
+						<li><a href="index.html" class="button scrolly">  Home  Page  </a></li>
+						<li><a href="photocatalog.html" class="button scrolly">Photo Catalog ?</a></li>
 					</ul>
 				</div>
 			</section>
@@ -36,21 +36,21 @@
 				<br>
                 <div class="row gtr-150">
                     <div class="col-4 col-12-medium">
-                        <span class="video size "><video controls src="Videos/Business.mp4"></video></span>
+                        <span class="video size "><video src="Videos/Business.mp4" controls poster="images/elevate.png" ></video></span>
                         <h3>Special Events</h3>
                         <p>If you have any upcoming events you'd like to capture for a lifetime here is an example of what I can do for you.</p>
 
                     </div>
                     <div class="col-4 col-12-medium">
-						<span class="video size"><video controls src="Videos/sports.mp4"></video></span>
+						<span class="video size"><video src="Videos/sports.mp4" controls></video></span>
                         <h3>Sports</h3>
                         <p>I work with Athletic organizations and individual athletes to create professional captivating motion pictures</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">More</a></li>
+                            <li><a href="https://www.instagram.com/topshotfiles/" class="button">More</a></li>
                         </ul>
                     </div>
                     <div class="col-4 col-12-medium">
-                        <span class="video size"><video controls src="Videos/prom.mp4"></video></span>
+                        <span class="video size"><video src="Videos/prom.mp4" controls ></video></span>
                         <h3>Music videos</h3>
                         <p>Featured here is my work with an upcoming Broward County artist.</p>
                     </div>
