--- a/videography.html
+++ b/videography.html
@@ -59,18 +59,17 @@
         </section>
 
         		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</section>
+				<section id="footer">
+					<ul class="icons">
+						<li><a href="https://twitter.com/topshotfiles/" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/topshotfiles/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.youtube.com/@topshotfiles5603" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="mailto:" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Kevin Aristhomene</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</section>
 
         		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
