added new poster photo for'elevate' video and added social links in the footer of website

--- a/videography.html
+++ b/videography.html
@@ -36,7 +36,7 @@
 				<br>
                 <div class="row gtr-150">
                     <div class="col-4 col-12-medium">
-                        <span class="video size "><video src="Videos/Business.mp4" controls poster="images/elevate.png" ></video></span>
+                        <span class="video size "><video src="Videos/Business.mp4" controls poster="images/elevate.jpg" ></video></span>
                         <h3>Special Events</h3>
                         <p>If you have any upcoming events you'd like to capture for a lifetime here is an example of what I can do for you.</p>
 
@@ -64,7 +64,7 @@
 						<li><a href="https://twitter.com/topshotfiles/" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.instagram.com/topshotfiles/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.youtube.com/@topshotfiles5603" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
-						<li><a href="mailto:" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:topshotfiles@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Kevin Aristhomene</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
