--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Form -->
 		<section class="form">
 			<h4>Contact Me</h4>
-			<form method="post" action="#">
+			<form name="contact" method="post" action="#" netlify>
 				<div class="row gtr-uniform gtr-50">
 					<div class="col-6 col-12-xsmall">
 						<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
@@ -477,17 +477,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		</section>
 
 		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="https://twitter.com/topshotfiles/" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.instagram.com/topshotfiles/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://www.youtube.com/@topshotfiles5603" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
-					<li><a href="mailto:" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Kevin Aristhomene</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</section>
+		<section id="footer">
+			<ul class="icons">
+				<li><a href="https://twitter.com/topshotfiles/" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.instagram.com/topshotfiles/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.youtube.com/@topshotfiles5603" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+				<li><a href="mailto:topshotfiles@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Kevin Aristhomene</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
