change title and disabled contact form

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>TopShotFiles</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -464,12 +464,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
 					</div>
 					<div class="col-12">
-						<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+						<textarea name="demo-message" id="demo-message" placeholder="Form is currently disabled. Please contact me via the social links below. Thank you for your understanding." rows="6"></textarea>
 					</div>
 					<div class="col-12">
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
-							<li><input type="reset" value="Reset" /></li>
+							<li><span class="button primary disabled">Send Message</span></li>
+							<li><span class="button disabled">Reset</span></li>
 						</ul>
 					</div>
 				</div>
